Fix table on mobile

--- a/src/assets/scss/foundations.scss
+++ b/src/assets/scss/foundations.scss
@@ -215,6 +215,8 @@ table {
 
 	@media screen and (max-width: 768px) {
 		display: block;
+		width: fit-content;
+		margin-inline: auto;
 		overflow-x: scroll;
 	}
 }
